# mako

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md  apt_packages.sh  compile-cmake.sh  compile-makefile.sh  run_experiment.py  rust-lib  wscript
bash/: convert_ip.py  run_2pc_no_rep.sh  shard.sh  shard4.config
config/: 1c1s1p.yml  1c1s3r3p.yml
config/1leader_2followers/: generator.py  paxos10_shardidx0.yml  paxos10_shardidx1.yml  paxos10_shardidx2.yml  paxos11_shardidx0.yml  paxos11_shardidx1.yml  paxos11_shardidx2.yml  paxos12_shardidx0.yml  paxos12_shardidx1.yml  paxos12_shardidx2.yml  paxos13_shardidx0.yml  paxos13_shardidx1.yml  paxos13_shardidx2.yml  paxos14_shardidx0.yml  paxos14_shardidx1.yml  paxos14_shardidx2.yml  paxos15_shardidx0.yml  paxos15_shardidx1.yml  paxos15_shardidx2.yml  paxos16_shardidx0.yml  paxos16_shardidx1.yml  paxos16_shardidx2.yml  paxos17_shardidx0.yml  paxos17_shardidx1.yml  paxos17_shardidx2.yml  paxos18_shardidx0.yml  paxos18_shardidx1.yml  paxos18_shardidx2.yml  paxos19_shardidx0.yml  paxos19_shardidx1.yml  paxos19_shardidx2.yml  paxos1_shardidx0.yml  paxos1_shardidx1.yml  paxos1_shardidx2.yml  paxos20_shardidx0.yml  paxos20_shardidx1.yml  paxos20_shardidx2.yml  paxos21_shardidx0.yml  paxos21_shardidx1.yml  paxos21_shardidx2.yml  (+57 more)
config/1silo_1paxos_1follower/: 1.yml  10.yml  11.yml  12.yml  13.yml  14.yml  15.yml  16.yml  17.yml  18.yml  19.yml  1l.yml  2.yml  20.yml  21.yml  22.yml  23.yml  24.yml  25.yml  26.yml  27.yml  28.yml  29.yml  3.yml  30.yml  31.yml  32.yml  4.yml  5.yml  6.yml  7.yml  8.yml  9.yml
config/1silo_1paxos_2follower/: 1.yml  10.yml  11.yml  12.yml  13.yml  14.yml  15.yml  16.yml  17.yml  18.yml  19.yml  2.yml  20.yml  21.yml  22.yml  23.yml  24.yml  25.yml  26.yml  27.yml  28.yml  29.yml  3.yml  30.yml  31.yml  32.yml  4.yml  5.yml  6.yml  7.yml  8.yml  9.yml  run.sh
config/local/: 1follower_2.yml
examples/: common.h  simpleTransaction.cc
src/: nc_main.cc  run.cc
src/bench/paxos_lib/: network_bench.cc
src/deptran/: communicator.cc  communicator.h  concurrentqueue.h  config.cc  config.h  coordinator.h  helloworld.h  helloworld.py  marshallable.h  network.h  network.rpc  paxos_main_helper.cc  paxos_worker.cc  paxos_worker.h  rcc_rpc.rpc  s_main.h  scheduler.h  server_worker.cc
src/deptran/classic/: scheduler.cc  scheduler.h
src/deptran/network_client/: network_impl.cc  network_impl.h
src/deptran/paxos/: bulk_operations.h  commo.cc  commo.h  coordinator.cc  coordinator.h  frame.cc  server.cc  server.h  service.cc  service.h
src/mako/: README.md  batch-exec-1.sh  batch-runner.sh  compile-a.sh  compile-b.sh  compile-coco.sh  count-a.sh  datacenter-failure.diff  install.sh  install22.04.sh  kill-coco.sh  mako.hh  one-click.py  osdi.submission-datacenter.diff  update_config.sh  util.h
src/mako/benchmarks/: bench.cc  common.h  dbtest.cc  mbta_wrapper.hh  paxos_async_commit_test.cc  paxos_async_commit_test.sh
src/mako/config/: generator.py  local-shards1-warehouses11.yml  local-shards1-warehouses14.yml  local-shards1-warehouses21.yml  local-shards1-warehouses22.yml  local-shards1-warehouses23.yml  local-shards1-warehouses24.yml  local-shards1-warehouses26.yml  local-shards1-warehouses27.yml  local-shards1-warehouses3.yml  local-shards1-warehouses31.yml  local-shards1-warehouses32.yml  local-shards1-warehouses5.yml  local-shards1-warehouses6.yml  local-shards1-warehouses8.yml  local-shards1-warehouses9.yml  local-shards10-warehouses1.yml  local-shards10-warehouses10.yml  local-shards10-warehouses11.yml  local-shards10-warehouses17.yml  local-shards10-warehouses18.yml  local-shards10-warehouses20.yml  local-shards10-warehouses21.yml  local-shards10-warehouses22.yml  local-shards10-warehouses24.yml  local-shards10-warehouses28.yml  local-shards10-warehouses3.yml  local-shards10-warehouses31.yml  local-shards10-warehouses32.yml  local-shards10-warehouses5.yml  local-shards10-warehouses6.yml  local-shards10-warehouses7.yml  local-shards10-warehouses8.yml  local-shards10-warehouses9.yml  local-shards2-warehouses1.yml  local-shards2-warehouses12.yml  local-shards2-warehouses14.yml  local-shards2-warehouses15.yml  local-shards2-warehouses16.yml  local-shards2-warehouses2.yml  (+117 more)
src/mako/lib/: Rules.mk  common.h  configuration.cc  kv_store.cc  kv_store.h  promise.h  rust_wrapper.cc  rust_wrapper.h  server.cc  shardClient.cc
src/rrr/base/: basetypes.cpp  basetypes.hpp
src/rrr/misc/: cpuinfo.hpp  marshal.cpp  marshal.hpp  marshallable.cc  marshallable.h
src/rrr/reactor/: epoll_wrapper.h  reactor.cc
src/rrr/rpc/: client.cpp  server.cpp  utils.cpp  utils.hpp
src/rrr/rpc_test/: rpc_test.cpp  run.sh
src/warbler/: README.md  arm.path  compile-coco.sh  count-b.sh  failure_recover_exp_coco.sh  jemalloc.stats  nfs-master.sh  parsehosts.sh  runner.sh  sigmod.submission.diff  single-shard-failure.diff  ssh_all.sh  update_config.sh
src/warbler/azure-scripts/: azure.py
src/warbler/backup_script/: u.sh
src/warbler/bash/: batch_op_zoo2.sh  op.sh  run_x.sh
src/warbler/benchmarks/: bench.cc
src/warbler/config/: local-shards1-warehouses1.yml  local-shards1-warehouses10.yml  local-shards1-warehouses12.yml  local-shards1-warehouses13.yml  local-shards1-warehouses15.yml  local-shards1-warehouses16.yml  local-shards1-warehouses17.yml  local-shards1-warehouses18.yml  local-shards1-warehouses19.yml  local-shards1-warehouses2.yml  local-shards1-warehouses20.yml  local-shards1-warehouses25.yml  local-shards1-warehouses28.yml  local-shards1-warehouses29.yml  local-shards1-warehouses30.yml  local-shards1-warehouses4.yml  local-shards1-warehouses7.yml  local-shards10-warehouses12.yml  local-shards10-warehouses13.yml  local-shards10-warehouses14.yml  local-shards10-warehouses15.yml  local-shards10-warehouses16.yml  local-shards10-warehouses19.yml  local-shards10-warehouses2.yml  local-shards10-warehouses23.yml  local-shards10-warehouses25.yml  local-shards10-warehouses26.yml  (+137 more)
version-1/: CMakeLists.txt  CMakeLists.txt.diff  README.md  compile_dbtest.sh  experiment_s1_norepl_t6_tpcc_r30s_compile-only.sh
(+46 files in other folders)
